# invisible

./: .clippy.toml  .dockerignore  .gitignore  .gitmodules  .rustfmt.toml  ADMIN-DASHBOARD-SUMMARY.md  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INVISIBLE-PLATFORM-OVERVIEW.md  LICENSE  NETWORK-PRIVACY-MODE-SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  SHADOW-WALLET-SECURITY-ANALYSIS.md  WALLET-HARDENING-SUMMARY.md  deny.toml  docker-compose.yml  install.sh  metadata.json  project-plan.md  quick-start.sh  run.sh  test_relay_client.rs
.github/workflows/: ci.yml  rust-ci.yml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
crates/: .gitkeep
crates/client/: Cargo.toml
crates/client-ffi/: Cargo.toml
crates/client-ffi/src/: lib.rs  messaging.rs  network.rs  wallet.rs
crates/client/src/: account.rs  calls.rs  client.rs  contacts.rs  dashboard.rs  error.rs  lib.rs  messages.rs  sync.rs
crates/crypto/: Cargo.toml
crates/crypto/benches/: crypto_bench.rs
crates/crypto/src/: double_ratchet.rs  error.rs  kdf.rs  keys.rs  lib.rs  utils.rs  x3dh.rs
crates/ffi/: Cargo.toml
crates/ffi/src/: crypto.rs  error.rs  lib.rs  storage.rs  wallet.rs
crates/messaging/: Cargo.toml
crates/messaging/src/: attachment.rs  conversation.rs  error.rs  lib.rs  message.rs  session.rs
crates/relay/: Cargo.toml
crates/relay/src/: api.rs  error.rs  lib.rs  main.rs  metrics.rs  node.rs  server.rs
crates/scrambler/: Cargo.toml
crates/scrambler/benches/: scrambler_bench.rs
crates/scrambler/src/: camouflage.rs  cover_traffic.rs  dead_drop.rs  error.rs  lib.rs  mixnet.rs  network.rs  orchestrator.rs  shamir.rs  sphinx.rs  temporal.rs  vpn.rs
crates/storage/: Cargo.toml
crates/storage/src/: contacts.rs  database.rs  error.rs  lib.rs  messages.rs  migrations.rs  wallet.rs
crates/wallet/: Cargo.toml
crates/wallet/src/: bitcoin.rs  btc.rs  error.rs  ethereum.rs  hd_wallet.rs  lib.rs  monero.rs  swap.rs  types.rs  wallet.rs  xmr.rs  zcash.rs
docker/: README.md
docs/: DASHBOARD_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  FLUTTER_SETUP.md  INFRASTRUCTURE_DEPLOYMENT.md  PRODUCTION_VERIFICATION_REPORT.md  QUICK_START.md  SERVERS_SIMPLE_GUIDE.md  SERVER_OPSEC_GUIDE.md  SERVICE_VERIFICATION_COMPLETE.md
docs/infrastructure/: INFRASTRUCTURE_DEPLOYMENT_GUIDE.md  QUICK_REFERENCE.md  SERVER_MANAGEMENT_FRAMEWORK.md
docs/plans/: 2026-02-13-comprehensive-project-plan-design.md  2026-02-13-project-plan-enhancement.md
infrastructure/ansible-templates/: ansible.cfg  bootstrap-playbook.yml  inventory-template.yml  setup-infrastructure-ops.sh
invisible_app/: .gitignore  build.sh  pubspec.yaml
invisible_app/integration_test/: app_test.dart  wallet_test.dart
invisible_app/lib/bridge/: auth_bridge.dart  messaging_bridge.dart  wallet_bridge.dart
invisible_app/lib/ffi/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
invisible_app/lib/ffi/api/: auth.dart  wallet.dart
invisible_app/lib/providers/: auth_provider.dart  wallet_provider.dart
invisible_app/lib/screens/auth/: lock_screen.dart  onboarding_screen.dart  pin_setup_screen.dart  twofa_setup_screen.dart
invisible_app/lib/services/: secure_storage.dart
invisible_app/macos/Runner/: libinvisible_bridge.dylib
invisible_app/rust/: CODEGEN_README.md  Cargo.toml  build.rs  flutter_rust_bridge.yaml
invisible_app/rust/src/: frb_generated.rs
invisible_app/rust/src/api/: auth.rs  messaging.rs  mod.rs  wallet.rs
invisible_app/test/bridge/: auth_bridge_test.dart
mobile/: README.md  analysis_options.yaml  pubspec.yaml
mobile/lib/: main.dart
mobile/lib/screens/: chat_screen.dart  conversations_screen.dart  settings_screen.dart  wallet_screen.dart
monitoring/: prometheus.yml
scripts/: health-check.sh
spec/: MASTER-PLAN.md  README.md
spec/architecture/: access-control.md  admin-dashboard.md  api-reference.md  burn-rooms.md  cryptography.md  data-models.md  defi-proxy.md  ghost-vpn.md  group-messaging.md  identity-system.md  network-privacy-mode.md  phantom-swap.md  scrambler.md  shadow-wallet-hardening.md  shadow-wallet.md  zero-log-doctrine.md
spec/brand/: 01-visual-identity.md  02-brand-voice.md  03-product-vision.md
spec/epics/: epic-00-foundation.md  epic-01-messaging.md  epic-02-contacts.md  epic-03-scrambler.md  epic-04-groups.md  epic-05-media.md  epic-06-calls.md  epic-07-mesh.md  epic-08-hardening.md  epic-09-ghost-vpn.md  epic-10-shadow-wallet.md  epic-11-privacy-coins.md  epic-12-phantom-swap.md  epic-13-defi-proxy.md  epic-14-relay-nodes.md  epic-15-burn-rooms.md  epic-16-access-control.md
tests/integration/: e2e_test.rs
