[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT"
repository = "https://github.com/Light-Brands/invisible"

[workspace.dependencies]
# Cryptography
ring = "0.17"
argon2 = "0.5"
zeroize = { version = "1.7", features = ["derive"] }
subtle = "2.5"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = "2.1"
curve25519-dalek = "4.1"
sha2 = "0.10"
hmac = "0.12"
blake3 = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Networking
libp2p = "0.53"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Testing
proptest = "1.4"
criterion = "0.5"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.dev]
# Faster builds for development
opt-level = 0
debug = true

[profile.release]
# Maximum optimization for production
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
# Optimized for benchmarking
inherits = "release"
strip = false
debug = true
