[package]
name = "invisible-client-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "invisible_client_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Internal dependencies
invisible-crypto = { path = "../crypto" }
invisible-scrambler = { path = "../scrambler" }
invisible-wallet = { path = "../wallet" }
invisible-relay = { path = "../relay" }

# FFI
libc = "0.2"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async
tokio = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
once_cell = "1.19"

[build-dependencies]
cbindgen = "0.26"
