[package]
name = "invisible-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core crates
invisible-crypto = { path = "../crypto" }
invisible-messaging = { path = "../messaging" }
invisible-storage = { path = "../storage" }
invisible-wallet = { path = "../wallet" }
invisible-scrambler = { path = "../scrambler" }

# Networking
tokio = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }

# WebRTC for voice/video
webrtc = "0.9"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "invisible_client"
path = "src/lib.rs"
