[package]
name = "invisible-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "invisible_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Core crates
invisible-crypto = { path = "../crypto" }
invisible-wallet = { path = "../wallet" }
invisible-storage = { path = "../storage" }
invisible-scrambler = { path = "../scrambler" }

# FFI
flutter_rust_bridge = "2.0"
allo-isolate = "0.1"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async
tokio = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = "0.3"

# Utilities
once_cell = "1.19"
hex = "0.4"
chrono = "0.4"

[build-dependencies]
flutter_rust_bridge_codegen = "2.0"
