[package]
name = "invisible-relay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core
invisible-crypto = { path = "../crypto" }
invisible-scrambler = { path = "../scrambler" }

# Networking
tokio = { workspace = true }
axum = "0.7"
tower = "0.4"
tower-http = "0.5"
hyper = "1.0"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Cryptography
ring = { workspace = true }
zeroize = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics
prometheus = "0.13"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
proptest = { workspace = true }

[lib]
name = "invisible_relay"
path = "src/lib.rs"

[[bin]]
name = "invisible-relay"
path = "src/bin/relay.rs"
