[package]
name = "invisible-relay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal dependencies
invisible-crypto = { path = "../crypto" }
invisible-scrambler = { path = "../scrambler" }

# Networking
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Cryptography
ring = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "invisible_relay"
path = "src/lib.rs"

[[bin]]
name = "invisible-relay"
path = "src/main.rs"
