[package]
name = "invisible-wallet"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal dependencies
invisible-crypto = { path = "../crypto" }
invisible-scrambler = { path = "../scrambler" }

# Crypto primitives
ring = { workspace = true }
zeroize = { workspace = true }

# Bitcoin
bitcoin = "0.31"

# Monero (placeholder - actual monero crate would go here)
# monero = "0.20"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Async
tokio = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
rand = "0.8"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
proptest = { workspace = true }

[lib]
name = "invisible_wallet"
path = "src/lib.rs"
