[package]
name = "invisible-wallet"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal dependencies
invisible-crypto = { path = "../crypto" }
invisible-scrambler = { path = "../scrambler" }

# Crypto primitives
ring = { workspace = true }
zeroize = { workspace = true }

# Bitcoin
bitcoin = "0.31"
bitcoincore-rpc = "0.18"

# Monero
monero = "0.20"
# TODO: Add monero-rpc when ready for full integration
# monero-rpc = "0.5"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Async
tokio = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
rand = "0.8"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
bip39 = "2.0"
reqwest = { version = "0.12", features = ["json"] }
sha3 = "0.10"  # Keccak256 for Ethereum addresses

[dev-dependencies]
tokio-test = "0.4"
proptest = { workspace = true }

[lib]
name = "invisible_wallet"
path = "src/lib.rs"
