[package]
name = "invisible_bridge"
version = "0.1.0"
edition = "2021"

# Exclude from parent workspace - this is a separate FFI bridge crate
[workspace]

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
flutter_rust_bridge = "2.0"
invisible_crypto = { package = "invisible-crypto", path = "../../crates/crypto" }
invisible_wallet = { package = "invisible-wallet", path = "../../crates/wallet" }
invisible_scrambler = { package = "invisible-scrambler", path = "../../crates/scrambler" }
invisible_storage = { package = "invisible-storage", path = "../../crates/storage" }
invisible_messaging = { package = "invisible-messaging", path = "../../crates/messaging" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"

[build-dependencies]
flutter_rust_bridge_codegen = "2.0"
