[package]
name = "invisible_bridge"
version = "0.1.0"
edition = "2021"
description = "FFI bridge between Flutter UI and Invisible Rust backend"
license = "MIT OR Apache-2.0"
publish = false

# Exclude from parent workspace - this is a separate FFI bridge crate
[workspace]

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
invisible_crypto = { package = "invisible-crypto", path = "../../crates/crypto" }
invisible_wallet = { package = "invisible-wallet", path = "../../crates/wallet" }
invisible_scrambler = { package = "invisible-scrambler", path = "../../crates/scrambler" }
invisible_storage = { package = "invisible-storage", path = "../../crates/storage" }
invisible_messaging = { package = "invisible-messaging", path = "../../crates/messaging" }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
argon2 = "0.5"
totp-lite = "2.0"
base32 = "0.4"
rand = "0.8"
subtle = "2.5"  # For constant-time comparisons
zeroize = "1.8"  # For secure memory clearing
bip39 = "2.0"

[build-dependencies]
flutter_rust_bridge_codegen = "2.0"
anyhow = "1"
